--- a/lumina_pers/lumina-pers/index.html
+++ b/lumina_pers/lumina-pers/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lumina Press | SMA Masehi Kudus</title>
+  <title>Lumina Pers | SMA Masehi Kudus</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
   <header class="site-header">
     <div class="top-bar">
       <div class="container top-bar-inner">
-        <h1 class="logo">Lumina Press</h1>
+        <h1 class="logo">Lumina Pers</h1>
 
         <nav class="top-nav">
           <a href="index.html" class="active">Beranda</a>
@@ -60,7 +60,7 @@
   <!-- FOOTER -->
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>© 2026 Lumina Press — SMA Masehi Kudus</p>
+      <p>© 2026 Lumina Pers — SMA Masehi Kudus</p>
     </div>
   </footer>
 
