--- a/lumina_pers/lumina-pers/pages/tentang.html
+++ b/lumina_pers/lumina-pers/pages/tentang.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Tentang | Lumina Press</title>
+  <title>Tentang | Lumina Pers</title>
   <link rel="stylesheet" href="../assets/css/tentang.css" />
 </head>
 <body>
@@ -12,7 +12,7 @@
   <header class="site-header">
     <div class="top-bar">
       <div class="container top-bar-inner">
-        <h1 class="logo">Lumina Press</h1>
+        <h1 class="logo">Lumina Pers</h1>
         <nav class="top-nav">
           <a href="../index.html">Beranda</a>
           <a href="berita.html">Berita</a>
@@ -80,7 +80,7 @@
   <!-- FOOTER -->
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>© 2026 Lumina Press — SMA Masehi Kudus</p>
+      <p>© 2026 Lumina Pers — SMA Masehi Kudus</p>
     </div>
   </footer>
 
