--- a/lumina_pers/lumina-pers/pages/tentang.html
+++ b/lumina_pers/lumina-pers/pages/tentang.html
@@ -38,7 +38,7 @@
     <div class="container hero-inner">
       <span class="hero-label">Tentang</span>
       <h2>Tentang Lumina Club</h2>
-      <p>Komunitas yang belajar bercerita lewat suara, visual, dan kata-kata</p>
+      <p>Where ideas find their light</p>
     </div>
   </section>
 
